--- a/style.css
+++ b/style.css
@@ -1,161 +1,233 @@
-body {
-    font-family: 'Roboto', sans-serif;
-}
-
-#main {
-    width: 1280px;
-    height: 800px;
-    margin: auto;
-}
-
-#left {
-    width: 830px;
-    height: 800px;
-    background: #FFEDF7;
-    float: left;
-}
-
-#right {
-    width: 450px;
-    height: 800px;
-    background: #003164;
-    float: right;
-}
-
-.leftsearch {
-    width: 445px;
-    height: 56px;
-    font-size: 16px;
-    color: #FF4384;
-    position: absolute;
-    top: 48px;
-    left: 85px;
-    display: block;
-}
-
-.bigbox {
-    margin-left: 85px;
-    position: absolute;
-    top: 249px;
-}
-
-.contentbig {
-    color: #003164;
-    font-size: 24px;
-    text-align: left;
-    font-weight: bold;
-    text-transform: uppercase;
-    display: inline;
-}
-
-.maru {
-    width: 48px;
-    height: 48px;
-    border-radius: 999em;
-    background-color: #FFEDF7;
-    border: 2px solid #003164;
-    display: inline-block;
-    margin-right: 16px;
-}
-
-.title {
-    color: #FF4384;
-    font-size: 176px;
-    text-align: center;
-    width: 454px;
-    height: 206px;
-    font-weight: bold;
-    position: absolute;
-    top: 297px;
-    margin-left: 80px;
-}
-
-.marusmall {
-    width: 24px;
-    height: 24px;
-    border-radius: 999em;
-    background-color: #FFEDF7;
-    border: 2px solid #003164;
-    display: inline-block;
-}
-
-.contentsmall {
-    display: inline-block;
-    width: 251px;
-    height: 19px;
-    font-size: 16px;
-    font-weight: bold;
-    text-align: left;
-}
-
-.more {
-    font-size: 16px;
-    text-align: right;
-    font-weight: bold;
-    color: #FF4384;
-    position: absolute;
-    top: 733px;
-    margin-left: 486px;
-    padding-top: 9px;
-}
-
-.contentbox {
-    width: 445px;
-    height: 32px;
-    border-bottom: 1px solid rgb(204, 202, 202);
-    padding-bottom: 10px;
-    margin-left: 85px;
-    position: absolute;
-    top: 610px;
-}
-
-.contentbox2 {
-    width: 445px;
-    height: 32px;
-    border-bottom: 1px solid rgb(204, 202, 202);
-    padding-bottom: 10px;
-    margin-left: 85px;
-    position: absolute;
-    top: 651px;
-}
-
-.contentbox3 {
-    width: 445px;
-    height: 32px;
-    border-bottom: 1px solid rgb(204, 202, 202);
-    padding-bottom: 10px;
-    margin-left: 85px;
-    position: absolute;
-    top: 692px;
-}
-
-.POMODORO {
-    writing-mode: vertical-rl;
-    position: absolute;
-    top: 587px;
-    margin-right: 85px;
-    font-size: 24px;
-    color: #FFFFFF;
-}
-
-.cycle {
-    width: 540px;
-    height: 540px;
-    border-radius: 999em;
-    border: 4px solid #FF4384;
-    display: flex;
-    position: absolute;
-    top:130px;
-    left:560px;
+    body {
+        font-family: 'Roboto', sans-serif;
+    }
     
-}
-.cycle1{
-    width: 500px;
-    height: 500px;
-    border-radius: 999em;
-   background: #FF4384;
-    display: flex;
-    position: absolute;
-    top:130px;
-    left:560px;
-}
+    #main {
+        width: 1280px;
+        height: 800px;
+        /* margin: auto; */
+        border: 3px solid rgb(151, 149, 149);
+        border-radius: 40px;
+    }
+    
+    #left {
+        width: 830px;
+        height: 800px;
+        background: #FFEDF7;
+        float: left;
+        border-top-left-radius: 40px;
+        border-bottom-left-radius: 40px;
+    }
+    
+    #right {
+        width: 450px;
+        height: 800px;
+        background: #003164;
+        float: right;
+        border-top-right-radius: 40px;
+        border-bottom-right-radius: 40px;
+    }
+    
+    .leftsearch {
+        width: 405px;
+        height: 24px;
+        font-size: 16px;
+        color: #FF4384;
+        position: relative;
+        top: 48px;
+        left: 85px;
+        display: block;
+        padding: 16px;
+        font-weight: bold;
+        font-style: italic;
+        border: 0px none white;
+        display: inline-block;
+    }
+    
+    .addsubmit {
+        width: 40px;
+        height: 40px;
+        color: #FF4384;
+        background: white;
+        position: fixed;
+        top: 48px;
+        left: 490px;
+        border: 0px none white;
+        font-size: 2rem;
+        display: inline-block;
+    }
+    
+    .bigbox {
+        margin-left: 85px;
+        position: absolute;
+        top: 249px;
+    }
+    
+    .contentbig {
+        color: #003164;
+        font-size: 24px;
+        text-align: left;
+        font-weight: bold;
+        text-transform: uppercase;
+        display: inline;
+    }
+    
+    .maru {
+        width: 48px;
+        height: 48px;
+        border-radius: 999em;
+        background-color: #FFEDF7;
+        border: 2px solid #003164;
+        display: inline-block;
+        margin-right: 16px;
+    }
+    
+    .title {
+        color: #FF4384;
+        font-size: 176px;
+        text-align: center;
+        width: 454px;
+        height: 206px;
+        font-weight: bold;
+        position: absolute;
+        top: 297px;
+        margin-left: 80px;
+        margin-right: 26px;
+    }
+    
+    .marusmall {
+        width: 24px;
+        height: 24px;
+        border-radius: 999em;
+        background-color: #FFEDF7;
+        border: 2px solid #003164;
+        display: inline-block;
+    }
+    
+    .contentsmall {
+        display: inline-block;
+        width: 251px;
+        height: 19px;
+        font-size: 16px;
+        font-weight: bold;
+        text-align: left;
+    }
+    
+    .more {
+        font-size: 16px;
+        text-align: right;
+        font-weight: bold;
+        color: #FF4384;
+        position: absolute;
+        top: 733px;
+        margin-left: 486px;
+        padding-top: 9px;
+    }
+    
+    .contentbox {
+        width: 445px;
+        height: 32px;
+        border-bottom: 1px solid rgb(204, 202, 202);
+        padding-bottom: 10px;
+        margin-left: 85px;
+        position: absolute;
+        top: 610px;
+    }
+    
+    .contentbox2 {
+        width: 445px;
+        height: 32px;
+        border-bottom: 1px solid rgb(204, 202, 202);
+        padding-bottom: 10px;
+        margin-left: 85px;
+        position: absolute;
+        top: 651px;
+    }
+    
+    .contentbox3 {
+        width: 445px;
+        height: 32px;
+        border-bottom: 1px solid rgb(204, 202, 202);
+        padding-bottom: 10px;
+        margin-left: 85px;
+        position: absolute;
+        top: 692px;
+    }
+    
+    .POMODORO {
+        writing-mode: vertical-rl;
+        position: absolute;
+        top: 587px;
+        margin-right: 85px;
+        font-size: 24px;
+        color: #FFFFFF;
+    }
+    
+    .cycle {
+        width: 540px;
+        height: 540px;
+        border-radius: 999em;
+        border: 4px solid #FF4384;
+        display: flex;
+        position: absolute;
+        top: 130px;
+        left: 560px;
+    }
+    
+    .cycle1 {
+        width: 500px;
+        height: 500px;
+        border-radius: 999em;
+        background: #FF4384;
+        display: flex;
+        position: absolute;
+        top: 150px;
+        left: 580px;
+    }
+    
+    .play {
+        width: 96px;
+        height: 96px;
+        background-image: url(img/baseline_play_circle_filled_white_48dp.png);
+        display: flex;
+        position: absolute;
+        top: 350px;
+        left: 782px;
+    }
+    
+    .icons1 {
+        width: 36px;
+        height: 36px;
+        background-image: url(img/list_white.png);
+        background-repeat: no-repeat;
+        display: block;
+        position: absolute;
+        top: 48px;
+        left: 1159px;
+        background-size: contain;
+        /* background: red; */
+    }
+    
+    .icons2 {
+        width: 36px;
+        height: 36px;
+        background-image: url(img/chart_white.png);
+        background-repeat: no-repeat;
+        display: block;
+        position: absolute;
+        top: 132px;
+        left: 1159px;
+        background-size: contain;
+    }
+    
+    .icons3 {
+        width: 36px;
+        height: 36px;
+        background-image: url(img/library_music_white.png);
+        background-repeat: no-repeat;
+        display: block;
+        position: absolute;
+        top: 216px;
+        left: 1159px;
+        background-size: contain;
+    }
